--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,27 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Class-Accessor-Fast-Contained
-version:      0.05
-version_from: lib/Class/Accessor/Fast/Contained.pm
-installdirs:  site
-requires:
-    base:                          1.01
-    Class::Accessor:               0
-
+---
+abstract: 'Fast accessors with data containment'
+author:
+  - 'Oliver Gorwits C<< <oliver.gorwits@oucs.ox.ac.uk> >>'
+build_requires:
+  Test::More: 0
+  Test::Pod: 0
+  Test::Pod::Coverage: 0
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+generated_by: 'Module::Install version 0.77'
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Class-Accessor-Fast-Contained
+no_index:
+  directory:
+    - inc
+    - t
+    - examples
+requires:
+  Class::Accessor: 0
+  base: 0
+  perl: 5.8.1
+resources:
+  license: http://dev.perl.org/licenses/
+version: 1.01
